--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -118,12 +118,42 @@ jobs:
       - name: Write ansible vault password to a file
         run: echo "${{ secrets.ANSIBLE_VAULT_PASS }}" > ansible/.vault_pass.txt
 
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_REGION}}
+                    
+      - name: Get github-action runner public ip
+        id: ip
+        run: |
+          echo "IP=$(curl -s https://checkip.amazonaws.com)" >> $GITHUB_OUTPUT
+          
+      - name: Open SSH port for runner (authorize via AWS CLI)
+        run: |
+          aws ec2 authorize-security-group-ingress \
+            --group-id ${{ secrets.AWS_SECURITY_GROUP_ID }} \
+            --protocol tcp \
+            --port 22 \
+            --cidr ${{ steps.ip.outputs.IP }}/32
+            --region ${{ secrets.AWS_REGION}}
+
       - name: Run ansible Deploy playbook
         run: |
           cd ansible
           source venv/bin/activate
           ansible-playbook playbooks/deploy.yml --vault-password-file .vault_pass.txt
-        
+
+      - name: Close SSH port for runner (revoking via AWS CLI)
+        run: |
+          aws ec2 revoke-security-group-ingress \
+            --group-id ${{ secrets.SECURITY_GROUP_ID }} \
+            --protocol tcp \
+            --port 22 \
+            --cidr ${{ steps.ip.outputs.IP }}/32
+            --region ${{ secrets.AWS_REGION}}
+
       - name: echo CD completion
         run : echo "Continuous Deployment stage completed!" 
 
