--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -139,6 +139,11 @@ jobs:
             --cidr ${{ steps.ip.outputs.IP }}/32 \
             --region ${{ secrets.AWS_REGION}}
 
+      - name: Write SSH key for runner
+        run: |
+          echo "${{ secrets.EC2_SSH_KEY }}" >> ~/.ssh/ubuntu_ec2.pem
+          chmod 600 ~/.ssh/ubuntu_ec2.pem
+
       - name: Run ansible Deploy playbook
         run: |
           cd ansible
