chore(cd): fix SSH key setup by ensuring .ssh directory exists before writing key

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -141,6 +141,7 @@ jobs:
 
       - name: Write SSH key for runner
         run: |
+          mkdir -p ~/.ssh
           echo "${{ secrets.EC2_SSH_KEY }}" >> ~/.ssh/ubuntu_ec2.pem
           chmod 600 ~/.ssh/ubuntu_ec2.pem
 
