--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -90,72 +90,86 @@ jobs:
             ${{ secrets.DOCKERHUB_USERNAME }}/history-service:${{ github.sha }}
 
 
-  cd:
-    name: Continuous Deployment
-    runs-on: ubuntu-latest
-    needs: ci
+  ### Continuous deployment commented out to enable manual trigger (Continuous Delivery)
+  ### This gives me more control because I can choose what app goes live on my single AWS free tier
+  ### The deployment process is still automated via Ansible, just manually triggered
 
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v5
+  # cd:
+  #   name: Continuous Deployment
+  #   runs-on: ubuntu-latest
+  #   needs: ci
 
-      - name: Setup Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.12'
-      - name: Create venv and install Ansible and community.docker
-        run: |
-          cd ansible
-          python -m venv venv
-          source venv/bin/activate
-          pip install --upgrade pip
-          pip install ansible
-          ansible-galaxy collection install community.docker
+  #   steps:
+  #     - name: Checkout code
+  #       uses: actions/checkout@v5
 
-      - name: Write ansible vault password to a file
-        run: echo "${{ secrets.ANSIBLE_VAULT_PASS }}" > ansible/.vault_pass.txt
+  #     - name: Setup Python
+  #       uses: actions/setup-python@v5
+  #       with:
+  #         python-version: '3.12'
+  #     - name: Create venv and install Ansible and community.docker
+  #       run: |
+  #         cd ansible
+  #         python -m venv venv
+  #         source venv/bin/activate
+  #         pip install --upgrade pip
+  #         pip install ansible
+  #         ansible-galaxy collection install community.docker
 
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v4
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ secrets.AWS_REGION}}
+  #     - name: Write ansible vault password to a file
+  #       run: echo "${{ secrets.ANSIBLE_VAULT_PASS }}" > ansible/.vault_pass.txt
+
+  #     - name: Configure AWS credentials
+  #       uses: aws-actions/configure-aws-credentials@v4
+  #       with:
+  #         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+  #         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+  #         aws-region: ${{ secrets.AWS_REGION}}
                     
-      - name: Get github-action runner public ip
-        id: ip
-        run: |
-          echo "IP=$(curl -s https://checkip.amazonaws.com)" >> $GITHUB_OUTPUT
+  #     - name: Get github-action runner public ip
+  #       id: ip
+  #       run: |
+  #         echo "IP=$(curl -s https://checkip.amazonaws.com)" >> $GITHUB_OUTPUT
           
-      - name: Open SSH port for runner (authorize via AWS CLI)
-        run: |
-          aws ec2 authorize-security-group-ingress \
-            --group-id ${{ secrets.AWS_SECURITY_GROUP_ID }} \
-            --protocol tcp \
-            --port 22 \
-            --cidr ${{ steps.ip.outputs.IP }}/32 \
-            --region ${{ secrets.AWS_REGION}}
+  #     - name: Open SSH port for runner (authorize via AWS CLI)
+  #       run: |
+  #         aws ec2 authorize-security-group-ingress \
+  #           --group-id ${{ secrets.AWS_SECURITY_GROUP_ID }} \
+  #           --protocol tcp \
+  #           --port 22 \
+  #           --cidr ${{ steps.ip.outputs.IP }}/32 \
+  #           --region ${{ secrets.AWS_REGION}}
 
-      - name: Write SSH key for runner
-        run: |
-          mkdir -p ~/.ssh
-          echo "${{ secrets.EC2_SSH_KEY }}" >> ~/.ssh/ubuntu_ec2.pem
-          chmod 600 ~/.ssh/ubuntu_ec2.pem
+  #     - name: Write SSH key for runner
+  #       run: |
+  #         mkdir -p ~/.ssh
+  #         echo "${{ secrets.EC2_SSH_KEY }}" >> ~/.ssh/ubuntu_ec2.pem
+  #         chmod 600 ~/.ssh/ubuntu_ec2.pem
 
-      - name: Run ansible Deploy playbook
-        run: |
-          cd ansible
-          source venv/bin/activate
-          ansible-playbook playbooks/deploy.yml --vault-password-file .vault_pass.txt  -e 'ansible_ssh_common_args="-o StrictHostKeyChecking=no"'
+  #     - name: Run ansible Deploy playbook
+  #       run: |
+  #         cd ansible
+  #         source venv/bin/activate
+  #         ansible-playbook playbooks/deploy.yml --vault-password-file .vault_pass.txt  -e 'ansible_ssh_common_args="-o StrictHostKeyChecking=no"'
 
-      - name: Close SSH port for runner (revoking via AWS CLI)
-        run: |
-          aws ec2 revoke-security-group-ingress \
-            --group-id ${{ secrets.AWS_SECURITY_GROUP_ID }} \
-            --protocol tcp \
-            --port 22 \
-            --cidr ${{ steps.ip.outputs.IP }}/32 \
-            --region ${{ secrets.AWS_REGION}}
+  #     - name: Close SSH port for runner (revoking via AWS CLI)
+  #       run: |
+  #         aws ec2 revoke-security-group-ingress \
+  #           --group-id ${{ secrets.AWS_SECURITY_GROUP_ID }} \
+  #           --protocol tcp \
+  #           --port 22 \
+  #           --cidr ${{ steps.ip.outputs.IP }}/32 \
+  #           --region ${{ secrets.AWS_REGION}}
+
+
+
+
+
+
+
+
+
+
 
 
 ######################
