--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -94,135 +94,42 @@ jobs:
   ### This gives me more control because I can choose what app goes live on my single AWS free tier
   ### The deployment process is still automated via Ansible, just manually triggered
 
-  # cd:
-  #   name: Continuous Deployment
-  #   runs-on: ubuntu-latest
-  #   needs: ci
+  cd:
+    name: Continuous Deployment
+    runs-on: ubuntu-latest
+    needs: ci
 
-  #   steps:
-  #     - name: Checkout code
-  #       uses: actions/checkout@v5
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v5
 
-  #     - name: Setup Python
-  #       uses: actions/setup-python@v5
-  #       with:
-  #         python-version: '3.12'
-  #     - name: Create venv and install Ansible and community.docker
-  #       run: |
-  #         cd ansible
-  #         python -m venv venv
-  #         source venv/bin/activate
-  #         pip install --upgrade pip
-  #         pip install ansible
-  #         ansible-galaxy collection install community.docker
+      - name: Setup Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.12'
+      - name: Create venv and install Ansible and community.docker
+        run: |
+          cd ansible
+          python -m venv venv
+          source venv/bin/activate
+          pip install --upgrade pip
+          pip install ansible
+          ansible-galaxy collection install community.docker
 
-  #     - name: Write ansible vault password to a file
-  #       run: echo "${{ secrets.ANSIBLE_VAULT_PASS }}" > ansible/.vault_pass.txt
+      - name: Export Hetzner VPS IP to environment
+        run: echo "HETZNER_IP=${{ secrets.HETZNER_IP }}" >> $GITHUB_ENV
+        
+      - name: Write ansible vault password to a file
+        run: echo "${{ secrets.ANSIBLE_VAULT_PASS }}" > ansible/.vault_pass.txt
 
-  #     - name: Configure AWS credentials
-  #       uses: aws-actions/configure-aws-credentials@v4
-  #       with:
-  #         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-  #         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-  #         aws-region: ${{ secrets.AWS_REGION}}
-                    
-  #     - name: Get github-action runner public ip
-  #       id: ip
-  #       run: |
-  #         echo "IP=$(curl -s https://checkip.amazonaws.com)" >> $GITHUB_OUTPUT
-          
-  #     - name: Open SSH port for runner (authorize via AWS CLI)
-  #       run: |
-  #         aws ec2 authorize-security-group-ingress \
-  #           --group-id ${{ secrets.AWS_SECURITY_GROUP_ID }} \
-  #           --protocol tcp \
-  #           --port 22 \
-  #           --cidr ${{ steps.ip.outputs.IP }}/32 \
-  #           --region ${{ secrets.AWS_REGION}}
-
-  #     - name: Write SSH key for runner
-  #       run: |
-  #         mkdir -p ~/.ssh
-  #         echo "${{ secrets.EC2_SSH_KEY }}" >> ~/.ssh/ubuntu_ec2.pem
-  #         chmod 600 ~/.ssh/ubuntu_ec2.pem
-
-  #     - name: Run ansible Deploy playbook
-  #       run: |
-  #         cd ansible
-  #         source venv/bin/activate
-  #         ansible-playbook playbooks/deploy.yml --vault-password-file .vault_pass.txt  -e 'ansible_ssh_common_args="-o StrictHostKeyChecking=no"'
-
-  #     - name: Close SSH port for runner (revoking via AWS CLI)
-  #       run: |
-  #         aws ec2 revoke-security-group-ingress \
-  #           --group-id ${{ secrets.AWS_SECURITY_GROUP_ID }} \
-  #           --protocol tcp \
-  #           --port 22 \
-  #           --cidr ${{ steps.ip.outputs.IP }}/32 \
-  #           --region ${{ secrets.AWS_REGION}}
-
-
-
-
-
-
-
-
-
-
-
-
-######################
-### old deployment ###
-######################
-#       - name: Echo CD stage
-#         run: echo "CD Stage Preparing to deploy to EC2..."
-
-#       - name: Generate .env from GitHub Secrets
-#         run: |
-#           echo "POSTGRES_USER=${{ secrets.POSTGRES_USER }}" >> .env
-#           echo "POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }}" >> .env
-#           echo "POSTGRES_AUTH_DB=${{ secrets.POSTGRES_AUTH_DB }}" >> .env
-#           echo "POSTGRES_HISTORY_DB=${{ secrets.POSTGRES_HISTORY_DB }}" >> .env
-#           echo "POSTGRES_TOURNAMENT_DB=${{ secrets.POSTGRES_TOURNAMENT_DB }}" >> .env
-#           echo "POSTGRES_AUTH_HOST=${{ secrets.POSTGRES_AUTH_HOST }}" >> .env
-#           echo "POSTGRES_HISTORY_HOST=${{ secrets.POSTGRES_HISTORY_HOST }}" >> .env
-#           echo "POSTGRES_TOURNAMENT_HOST=${{ secrets.POSTGRES_TOURNAMENT_HOST }}" >> .env
-#           echo "POSTGRES_PORT =${{ secrets.POSTGRES_PORT }}" >> .env
-#           echo "CLOUDFLARE_TUNNEL_TOKEN=${{ secrets.CLOUDFLARE_TUNNEL_TOKEN }}" >> .env
-#           echo "SECRET_KEY=${{ secrets.SECRET_KEY }}" >> .env
-#           echo "SECRET_KEY_HISTORY=${{ secrets.SECRET_KEY_HISTORY }}" >> .env
-#           echo "SECRET_KEY_TOURNAMENT=${{ secrets.SECRET_KEY_TOURNAMENT }}" >> .env
-#           echo "JWT_ALGO=${{ secrets.JWT_ALGO }}" >> .env
-
-#       - name: Set up SSH agent
-#         uses: webfactory/ssh-agent@v0.5.4
-#         with:
-#           ssh-private-key: ${{ secrets.EC2_SSH_KEY }}
-
-#       - name: Copy code to EC2
-#         run: |
-#           ssh -o StrictHostKeyChecking=no ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} "mkdir -p /home/${{ secrets.EC2_USER }}/mini_transcendence/"
-#           scp -o StrictHostKeyChecking=no -r . ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }}:/home/${{ secrets.EC2_USER }}/mini_transcendence/
-
-#       - name: Transfer .env file to EC2
-#         run: |
-#           # The source is .env (from the runner's current directory)
-#           # The target is the full path on EC2: /home/ubuntu/mini_transcendence/
-#           scp -o StrictHostKeyChecking=no .env ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }}:/home/${{ secrets.EC2_USER }}/mini_transcendence/
-
-#       - name: Deploy to EC2
-#         run: |
-#           echo "CD Stage: Connecting to EC2 instance..."
-#           ssh -o StrictHostKeyChecking=no ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} << 'EOF'
-#             echo "CD Stage: Navigating to project directory..."
-#             cd mini_transcendence/
-#             echo "CD Stage: Pulling latest code from Git..."
-#             git pull origin main
-#             echo "CD Stage: Stopping running containers..."
-#             sudo docker compose down
-#             echo "CD Stage: Building and restarting containers..."
-#             sudo docker compose up --build -d
-#             echo "CD Stage: Deployment complete."
-#           EOF
-
+      - name: Write SSH key for runner
+        run: |
+          mkdir -p ~/.ssh
+          echo "${{ secrets.HETZNER_SSH_KEY }}" >> ~/.ssh/id_hetzner
+          chmod 400 ~/.ssh/id_hetzner
+    
+      - name: Run ansible Deploy playbook
+        run: |
+          cd ansible
+          source venv/bin/activate
+          ansible-playbook playbooks/deploy.yml --vault-password-file .vault_pass.txt  -e 'ansible_ssh_common_args="-o StrictHostKeyChecking=no"'
