chore: update Ansible configuration for Hetzner VPS
- Replaced AWS-related configurations with Hetzner-specific settings.
- Updated ansible.cfg to use the new Hetzner inventory and private key.
- Changed all hosts in playbooks to target Hetzner VPS.
- Modified main.yml to align with Hetzner environment.
- Ensured compatibility with Hetzner infrastructure for deployment.

--- a/ansible/playbooks/deploy.yml
+++ b/ansible/playbooks/deploy.yml
@@ -24,7 +24,7 @@
 ---
 - name: Deploy mini_transcendence application
 
-  hosts: ec2_hosts
+  hosts: hetzner_instance
   become: yes
   gather_facts: yes
 
