--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,7 +1,7 @@
 # Configuration file for Ansible - update private_key_file path to match your environment
 [defaults]
-inventory = inventory/hosts.ini
-private_key_file = ~/.ssh/ubuntu_ec2.pem
+inventory = inventory/hetzner.yml
+private_key_file = ~/.ssh/id_hetzner
 roles_path = roles/
 
 [ssh_connection]
@@ -9,3 +9,16 @@ roles_path = roles/
 # Optimize SSH connections with ControlMaster for better performance
 ssh_args = -o ControlMaster=auto -o ControlPersist=60s -A
 #ssh_args = -A
+
+; #OLD AWS DEPLOY
+; # Configuration file for Ansible - update private_key_file path to match your environment
+; [defaults]
+; inventory = inventory/hosts.ini
+; private_key_file = ~/.ssh/ubuntu_ec2.pem
+; roles_path = roles/
+
+; [ssh_connection]
+; # Enable SSH agent forwarding (-A) for GIT private repository access
+; # Optimize SSH connections with ControlMaster for better performance
+; ssh_args = -o ControlMaster=auto -o ControlPersist=60s -A
+; #ssh_args = -A
