--- a/docker-compose-test.yml
+++ b/docker-compose-test.yml
@@ -32,7 +32,7 @@ services:
     #   dockerfile: Dockerfile
     image: almat101/auth-service:latest
     container_name: auth-service
-    command: sh /app/start.sh
+    command: ["gunicorn","auth_service.wsgi:application","--bind","0.0.0.0:8001","--workers","1","--threads","4"]
     env_file:
       - .env
     restart: unless-stopped
@@ -73,10 +73,7 @@ services:
     #   dockerfile: Dockerfile
     image: almat101/tournament-service:latest
     container_name: tournament-service
-    command: >
-      sh -c "python manage.py makemigrations &&
-               python manage.py migrate &&
-               gunicorn tournament.wsgi:application --bind 0.0.0.0:8003 --workers=1 --threads=4"
+    command: ["gunicorn","tournament.wsgi:application","--bind","0.0.0.0:8003","--workers","1","--threads","4"] 
     env_file:
       - .env
     restart: unless-stopped
@@ -114,10 +111,7 @@ services:
     #   dockerfile: Dockerfile
     image: almat101/history-service:latest
     container_name: history-service
-    command: >
-      sh -c "python manage.py makemigrations &&
-               python manage.py migrate &&
-               gunicorn history_service.wsgi:application --bind 0.0.0.0:8002 --workers=1 --threads=4"
+    command: ["gunicorn","history_service.wsgi:application","--bind","0.0.0.0:8002","--workers","1","--threads","4"]
     env_file:
       - .env
     restart: unless-stopped
