--- a/ansible/inventory/group_vars/all.yml
+++ b/ansible/inventory/group_vars/all.yml
@@ -13,6 +13,6 @@ app_repo_url: "https://github.com/almat101/mini_transcendence.git"  ###HTTPS
 # app_repo_url: "git@github.com:almat101/mini_transcendence.git" ###SSH
 app_branch: "main"
 # Altre variabili globali non sensibili
-
 # Nota: Le vars_files per i segreti (vars/secrets.yml) di solito si includono nel playbook principale
 # o in un ruolo specifico (come app_config) a seconda di chi ha bisogno di quei segreti.
+github_username: almat101
