feat: re-enable monitoring stack and split docker-compose for prod/dev
- Re-enabled Grafana, Prometheus, and Alertmanager services
- Updated monitoring container images to latest versions
- Re-enabled monitoring proxy routes in NGINX configuration
- Split docker-compose.yml into production and development configs:
  - Production uses IMAGE_TAG from .env (set by Ansible via -e image_tag=github.sha)
  - Updated healthchecks
  - Development uses volume mounts for hot reload
- Updated Prometheus configuration:
  - Set web.external-url and web.route-prefix for subpath routing
  - Modified NGINX to proxy to http://prometheus:9090/
- Updated README with monitoring stack documentation

--- a/ansible/roles/app_config/tasks/main.yml
+++ b/ansible/roles/app_config/tasks/main.yml
@@ -9,4 +9,7 @@
   #no_log: true # Impedisce che i contenuti sensibili del file appaiano nei log di Ansible
   become: yes
   become_user: "{{ app_owner_user }}"
-  #notify: Restart Docker Compose Services # Riabilitiamo la notifica dell'handler!
+
+  ### .env.j2 
+  # IMAGE_TAG is passed from CD pipeline with -e image_tag=github.sha
+  # Used in docker-compose.yml to pull the correct image version from GHCR
