--- a/monitoring/grafana/Dockerfile
+++ b/monitoring/grafana/Dockerfile
@@ -1,7 +1,8 @@
-FROM grafana/grafana:11.5.2
+# FROM grafana/grafana:11.5.2
+FROM grafana/grafana:12.3
 
-# Copy custom grafana.ini
-COPY /conf/grafana.ini /etc/grafana/grafana.ini
+# # Copy custom grafana.ini
+# COPY /conf/grafana.ini /etc/grafana/grafana.ini
 
 # Copy custom dashboards
 COPY /dashboards /var/lib/grafana/dashboards
