--- a/monitoring/grafana/conf/grafana.ini
+++ b/monitoring/grafana/conf/grafana.ini
@@ -4,44 +4,44 @@
 ;grafana log data retention
 [log]
 # Either "console", "file", "syslog". Default is console and file
-mode = file
+mode = console
 
 # Either "debug", "info", "warn", "error", "critical", default is "info"
 level = info
 
-# log file path
-file_name = /var/log/grafana/grafana.log
+; # log file path
+; file_name = /var/log/grafana/grafana.log
 
-# Max line number of lines in a single file before rotating it
-max_lines = 1000000
+; # Max line number of lines in a single file before rotating it
+; max_lines = 1000000
 
-# Segment log daily
-daily_rotate = true
+; # Segment log daily
+; daily_rotate = true
 
-# Max days to keep log files
-max_days = 7
+; # Max days to keep log files
+; max_days = 7
 
-[auth.github]
-name = GitHub
-icon = github
-enabled = true
-client_id = ${GRAFANA_CLIENT_ID}
-client_secret = ${GRAFANA_SECRET}
-scopes = user:email,read:org
-auth_url = https://github.com/login/oauth/authorize
-token_url = https://github.com/login/oauth/access_token
-api_url = https://api.github.com/user
-allow_sign_up = true
-auto_login = false
-role_attribute_path = 'Viewer'
-[auth.basic]
-enabled = true
-#this is valid when a user is created within the grafana admin
-# This setting will enable a stronger password policy for user's password under basic auth.
-# The password will need to comply with the following password policy
-# 1. Have a minimum of 12 characters
-# 2. Composed by at least 1 uppercase character
-# 3. Composed by at least 1 lowercase character
-# 4. Composed by at least 1 digit character
-# 5. Composed by at least 1 symbol character
-password_policy = true
+; [auth.github]
+; name = GitHub
+; icon = github
+; enabled = true
+; client_id = ${GRAFANA_CLIENT_ID}
+; client_secret = ${GRAFANA_SECRET}
+; scopes = user:email,read:org
+; auth_url = https://github.com/login/oauth/authorize
+; token_url = https://github.com/login/oauth/access_token
+; api_url = https://api.github.com/user
+; allow_sign_up = true
+; auto_login = false
+; role_attribute_path = 'Viewer'
+; [auth.basic]
+; enabled = true
+; #this is valid when a user is created within the grafana admin
+; # This setting will enable a stronger password policy for user's password under basic auth.
+; # The password will need to comply with the following password policy
+; # 1. Have a minimum of 12 characters
+; # 2. Composed by at least 1 uppercase character
+; # 3. Composed by at least 1 lowercase character
+; # 4. Composed by at least 1 digit character
+; # 5. Composed by at least 1 symbol character
+; password_policy = true
